[gd_scene load_steps=9 format=3 uid="uid://bmur2mu3v4hay"]

[ext_resource type="Script" uid="uid://bg53ktl323wbc" path="res://entities/playercontrolled/paddle.gd" id="1_c3it2"]
[ext_resource type="Texture2D" uid="uid://bwj8wp8mnrhwy" path="res://assets/paddle.png" id="2_4gvjs"]
[ext_resource type="AudioStream" uid="uid://bv1lp07ux4y4b" path="res://assets/laserShoot.wav" id="3_7ireo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ltcu"]
radius = 64.5
height = 512.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uf1nt"]
size = Vector2(513, 137)

[sub_resource type="Animation" id="Animation_pav2p"]
resource_name = "Parry"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 8), Vector2(18, 9), Vector2(16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dg6xa"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3m1f"]
_data = {
&"Parry": SubResource("Animation_pav2p"),
&"RESET": SubResource("Animation_dg6xa")
}

[node name="Paddle" type="CharacterBody2D" groups=["Paddle"]]
collision_mask = 2
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 0.0
platform_on_leave = 2
platform_floor_layers = 4294901760
script = ExtResource("1_c3it2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(16, 8)
texture = ExtResource("2_4gvjs")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3ltcu")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -3.5)
shape = SubResource("RectangleShape2D_uf1nt")

[node name="Barrel1" type="Marker2D" parent="."]
position = Vector2(-176, -56)

[node name="Barrel2" type="Marker2D" parent="."]
position = Vector2(176, -56)

[node name="ShootNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7ireo")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s3m1f")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
